--- a/dental/package.json
+++ b/dental/package.json
@@ -7,11 +7,21 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@inertiajs/vue3": "^2.2.14",
+        "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/vite": "^4.0.0",
+        "@vitejs/plugin-vue": "^6.0.1",
+        "autoprefixer": "^10.4.12",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.7"
+        "laravel-vite-plugin": "^2.0.1",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.2.1",
+        "vite": "^7.1.12",
+        "vue": "^3.5.22"
+    },
+    "dependencies": {
+        "@inertiajs/core": "^2.2.15",
+        "dayjs": "^1.11.19"
     }
 }
