--- a/dental/package.json
+++ b/dental/package.json
@@ -22,6 +22,8 @@
     },
     "dependencies": {
         "@inertiajs/core": "^2.2.15",
-        "dayjs": "^1.11.19"
+        "chart.js": "^4.5.1",
+        "dayjs": "^1.11.19",
+        "vue-chartjs": "^5.3.3"
     }
 }
